project(ARGUMENTS_SRC)

if(NOT TARGET ARGUMENTS_SRC)
#  file(GLOB SRCS argument*.cpp)
#  add_library(ARGUMENTS_SRC ${SRCS})
  add_library(ARGUMENTS_SRC argumentint.cpp argumentdouble.cpp argumentstring.cpp argumentfile.cpp)
  add_subdirectory(PROPERTIES)

  foreach(PROG test_argumentint)
# test_argumentdouble test_argumentstring test_argumentfile)
    add_executable(${PROG} ${PROG}.cpp)
    add_dependencies(${PROG} STRING_SUPPORT_SRC PROPERTIES_SRC ARGUMENTS_SRC)
    add_dependencies(PROPERTIES_SRC STRING_SUPPORT_SRC)
    add_dependencies(ARGUMENTS_SRC PROPERTIES_SRC STRING_SUPPORT_SRC)
    #target_link_libraries(${PROG} STRING_SUPPORT_SRC)
#ORDER FREAKING MATTERES FIRST LINK occurs at the end and works its way in
    target_link_libraries(${PROG} ARGUMENTS_SRC PROPERTIES_SRC STRING_SUPPORT_SRC)
    #target_link_libraries(${PROG} PROPERTIES_SRC)
    #target_link_libraries(${PROG} ARGUMENTS_SRC)
#    target_link_libraries(${PROG} STRING_SUPPORT_SRC PROPERTIES_SRC ARGUMENTS_SRC)
    add_test(${PROG} ${PROG})  
  endforeach(PROG)
endif()

#  foreach(PROG test_argumentint)
# test_argumentdouble test_argumentstring test_argumentfile)
#    add_executable(test_argumentint test_argumentint.cpp)
#    target_link_libraries(test_argumentint PROPERTIES_SRC)
#    target_link_libraries(test_argumentint ARGUMENTS_SRC)
#    target_link_libraries(test_argumentint STRING_SUPPORT_SRC)
#    add_test(test_argument test_argument)  
#  endforeach(PROG)

