add_library(QC_FUNCTIONS_SRC qc_functions.cpp)
if(${ENABLE_TESTS})
  add_executable(test_qc_functions test_qc_functions.cpp)
  target_link_libraries(test_qc_functions QC_FUNCTIONS_SRC)
  target_link_libraries(test_qc_functions MATRIX_SRC)
  target_link_libraries(test_qc_functions IO_SRC)
  target_link_libraries(test_qc_functions FILE_READERS_SRC)
  add_test(test_qc_functions test_qc_functions)
endif()
