#file( GLOB SRCS property*.cpp )
add_library(PROPERTIES_SRC propertyint.cpp propertyswitch.cpp propertystringchoice.cpp propertydouble.cpp propertystring.cpp propertysisterfile.cpp propertyfileext.cpp propertyfileexist.cpp)
if(${ENABLE_TESTS})
  foreach(PROG test_propertyint test_propertystringchoice test_propertyswitch test_propertydouble test_propertystring test_propertysisterfile test_propertyfileext test_propertyfileexist )
    add_executable(${PROG} ${PROG}.cpp)
    add_dependencies(${PROG} STRING_SUPPORT_SRC)
    target_link_libraries(${PROG} PROPERTIES_SRC)
    target_link_libraries(${PROG} STRING_SUPPORT_SRC)
    add_test(${PROG} ${PROG})
  endforeach(PROG)
endif()
